color contrast fixes in code samples + examples

--- a/_sass/syntax.css
+++ b/_sass/syntax.css
@@ -1,24 +1,24 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .cm {
-  color: #999988;
+  color: #333322;
   font-style: italic;
 }
 .highlight .cp {
-  color: #999999;
+  color: #333333;
   font-weight: bold;
 }
 .highlight .c1 {
-  color: #999988;
+  color: #333322;
   font-style: italic;
 }
 .highlight .cs {
-  color: #999999;
+  color: #333333;
   font-weight: bold;
   font-style: italic;
 }
 .highlight .c, .highlight .ch, .highlight .cd, .highlight .cpf {
-  color: #999988;
+  color: #333322;
   font-style: italic;
 }
 .highlight .err {
@@ -37,7 +37,7 @@
   color: #aa0000;
 }
 .highlight .gh {
-  color: #999999;
+  color: #333333;
 }
 .highlight .gi {
   color: #000000;
